[Autofill] Fix Elo card mapping (Visa's "4" and Union Pay's "62" were bypassing it)

Bug: 868566
Change-Id: Icf41453cc6b4528463e32338d30eef0c037ce6b4
Reviewed-on: https://chromium-review.googlesource.com/1159738
Commit-Queue: Jared Saul <jsaul@google.com>
Reviewed-by: Sebastien Seguin-Gagnon <sebsg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580301}
Former-commit-id: 314c21b1f6d6b5c676455969bc6b4446b0fd38b8